[gd_scene load_steps=2 format=3 uid="uid://dq3lyfktnc81m"]

[ext_resource type="Script" path="res://scenes/player/weapon.gd" id="1_w0xtn"]

[node name="Weapon" type="Node2D"]
script = ExtResource("1_w0xtn")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(67, 0)
scale = Vector2(0.024, 0.008)

[node name="Timer" type="Timer" parent="WeaponPivot"]
unique_name_in_owner = true

[connection signal="timeout" from="WeaponPivot/Timer" to="." method="_on_timer_timeout"]
